Bug 168792 - song position not remembered on exit
Summary: song position not remembered on exit
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-09 01:08 UTC by a thing
Modified: 2008-08-21 16:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description a thing 2008-08-09 01:08:12 UTC
Version:           2.0-svn (using KDE 4.1.0)
Installed from:    Fedora RPMs

When the "Resume playback on start" option is checked, Amarok does not remember the position in the song it was at on last exit. It should continue playing where it left off.

I could see this being undesirable when leaving Amarok closed for a long time though, so perhaps there should be an option under the "Resume playback on start" configuration, "Resume from last song position".
Comment 1 Lydia Pintscher 2008-08-17 19:38:20 UTC
agreed on the first part

no option though
Comment 2 Mark Kretschmann 2008-08-21 16:25:37 UTC
Fixed with SVN commit r850442.