Make "Resume playback on start" also restore the right track position correctly.

BUG: 168792

svn path=/trunk/extragear/multimedia/amarok/; revision=850442